force-app/main/default/objects/Bank_Guarantee__c/Bank_Guarantee__c.object-meta.xml
<CustomObject>
    <description>保證函</description>
    <label>Bank Guarantee</label>
    <nameField>
        <displayFormat>BG{YYYY}{MM}{DD}{0000}</displayFormat>
        <label>Bank Guarantee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Guarantee</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>