force-app/main/default/objects/Bank_Guarantee__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>Account Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Travel Agency does not exist.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Travel Agency</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bank Guarantee</relationshipLabel>
    <relationshipName>Account_Bank_Guarantee</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>