force-app/main/default/objects/Bank_Guarantee__c/fields/Active_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Active_Indicator__c</fullName>
    <formula>AND(
 Bank_Guarantee_Valid_Date__c &lt;= TODAY(),
 Bank_Guarantee_Expiry_Date__c &gt;= TODAY()
)</formula>
    <label>Active Indicator</label>
    <type>Checkbox</type>
</CustomField>