force-app/main/default/objects/Bank_Guarantee__c/fields/Bank_Guarantee_Category__c.field-meta.xml
<CustomField>
    <fullName>Bank_Guarantee_Category__c</fullName>
    <description>保證種類</description>
    <label>Bank Guarantee Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Letter of Guarantee</fullName>
            </value>
            <value>
                <fullName>Certificate of Deposite</fullName>
            </value>
            <value>
                <fullName>Cash/Immediate Cheque</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>