force-app/main/default/objects/Bank_Guarantee__c/fields/Bank_Guarantee_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Bank_Guarantee_Expiry_Date__c</fullName>
    <description>保證函到期日</description>
    <label>Bank Guarantee Expiry Date</label>
    <type>Date</type>
</CustomField>