force-app/main/default/objects/Bank_Guarantee__c/fields/Bank_Guarantee_Valid_Date__c.field-meta.xml
<CustomField>
    <fullName>Bank_Guarantee_Valid_Date__c</fullName>
    <description>保證函起始日</description>
    <label>Bank Guarantee Valid Date</label>
    <type>Date</type>
</CustomField>