force-app/main/default/objects/Bank_Guarantee__c/fields/Bank_Guarantee_Withdrawal_Date__c.field-meta.xml
<CustomField>
    <fullName>Bank_Guarantee_Withdrawal_Date__c</fullName>
    <description>取回保證函申請日期</description>
    <label>Bank Guarantee Withdrawal Date</label>
    <type>Date</type>
</CustomField>