force-app/main/default/objects/Bank_Guarantee__c/fields/Certification_No__c.field-meta.xml
<CustomField>
    <fullName>Certification_No__c</fullName>
    <description>保證書號碼/存單號碼</description>
    <label>Certification No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>