force-app/main/default/objects/Bank_Guarantee__c/fields/Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Amount__c</fullName>
    <description>申請額度</description>
    <label>Credit Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>