force-app/main/default/objects/Bank_Guarantee__c/fields/Credit_Contact__c.field-meta.xml
<CustomField>
    <fullName>Credit_Contact__c</fullName>
    <label>Credit Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>