force-app/main/default/objects/Bank_Guarantee__c/fields/Credit_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Credit_Contact_Email__c</fullName>
    <description>旅行社申請人電子郵箱</description>
    <label>Credit Contact Email</label>
    <type>Email</type>
</CustomField>