force-app/main/default/objects/Bank_Guarantee__c/fields/Issuing_Bank__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Bank__c</fullName>
    <description>開立銀行</description>
    <label>Issuing Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>