force-app/main/default/objects/Bank_Guarantee__c/fields/Withdraw_Before_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Withdraw_Before_Expiry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>到期前領回</description>
    <label>Withdraw Before Expiry</label>
    <type>Checkbox</type>
</CustomField>