force-app/main/default/objects/Bank_Guarantee__c/fields/Withdrawal_Applicant_Department__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Applicant_Department__c</fullName>
    <description>取回保證函申請人部門</description>
    <label>Withdrawal Applicant Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>