force-app/main/default/objects/Bank_Guarantee__c/fields/Withdrawal_Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Applicant_Name__c</fullName>
    <description>取回保證函申請人</description>
    <label>Withdrawal Applicant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>