force-app/main/default/objects/Bank_Guarantee__c/fields/Withdrawal_Applicant_Number__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Applicant_Number__c</fullName>
    <label>Withdrawal Applicant Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>