force-app/main/default/objects/Bank_Guarantee__c/fields/Withdrawal_BPM_No__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_BPM_No__c</fullName>
    <description>取回保證函BPM編號</description>
    <label>Withdrawal BPM No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>