force-app/main/default/objects/Bank_Guarantee__c/fields/Withdrawal_Remark__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Remark__c</fullName>
    <label>Withdrawal Remark</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>