force-app/main/default/objects/Bank_Guarantee__c/recordTypes/CGD_Bank_Guarantee.recordType-meta.xml
<RecordType>
    <fullName>CGD_Bank_Guarantee</fullName>
    <active>true</active>
    <description>For CGD</description>
    <label>CGD - Bank Guarantee</label>
</RecordType>