force-app/main/default/objects/Bank_Guarantee__c/recordTypes/PMD_Bank_Guarantee.recordType-meta.xml
<RecordType>
    <fullName>PMD_Bank_Guarantee</fullName>
    <active>true</active>
    <description>For PMD</description>
    <label>PMD - Bank Guarantee</label>
</RecordType>